# KPassword

./: .gitignore  CHANGELOG.md  CRYPTOGRAPHY.md  README.md  README_APP_ICON_UI_INSTALLER_READY.txt  README_BUILD_INSTALLER_UNIQUE_ICON_CHECK.txt  README_CORRECAO_SOM_WEB_AUDIO.txt  README_CREDENCIAIS_COMPACTAS.txt  README_FINALIZAR_UPDATER_V030.txt  README_FIX_CLOSED_SIDEBAR_LOGO_OFFSET.txt  README_FIX_MENU_TOGGLE_JSX.txt  README_FIX_NSIS_INSTALLER_ICON_V2.txt  README_FIX_UI_ICON_SIZE_ONLY.txt  README_FIX_V033_ASYNC_DUPLICADO.txt  README_FIX_V051_WINDOWS_HELLO_DPAPI.txt  README_ICON_FINAL_SIZE_TUNING.txt  README_IDIOMAS_GLOBAIS_V032.txt  README_LOGIN_UPDATE_GITHUB_FLOW.txt  README_MENU_TOGGLE_APP_ICON.txt  README_PATCH_LOGIN_REFINO.txt  README_PATCH_LOGIN_REFINO2.txt  README_PATCH_LOGIN_REFINO3.txt  README_PATCH_LOGIN_RESET_CLEAN.txt  README_PATCH_LOGIN_RESET_TUNE.txt  README_PATCH_LOGIN_RESET_TUNE2.txt  README_PATCH_LOGIN_TUNE3_FIX.txt  README_PATCH_LOGIN_TUNE4_TOPO_CLEAN.txt  README_PATCH_LOGIN_TUNE5_TOP_SPACING.txt  README_PATCH_MENU_RESPONSIVO_ESTAVEL.txt  README_PATCH_MIXED_LOGIN_INPUT_TEXT.txt  README_PATCH_TRAY_ICON_V2.txt  README_PATCH_V084.txt  README_REVERT_SIDEBAR_BUTTONS_FIX_ONLY_LOGO.txt  README_SIDEBAR_LOGO_AXIS_ALIGN.txt  README_UX_CREDENCIAIS_POPUP_SIDEBAR.txt  README_UX_MENU_DRAG_CONFIRM_CLIPBOARD.txt  README_V040.txt  README_V041_IMPORT_EXPORT_ANEXOS.txt  README_V052_HOTFIX_WINDOWS_HELLO_RELEASE.txt  README_V060_DESIGN_DESKTOP_DASHBOARD_LOGIN.txt  (+24 more)
docs/: ARCHITECTURE.md  CSS_AUDIT.md  MAINTENANCE.md  QA_CHECKLIST.md  RELEASE_CHECKLIST.md  SECURITY.md  USER_GUIDE.md  VAULT_DIAGNOSTIC.md
src/: App.css  App.tsx  crypto.ts  i18n.ts  main.tsx  password.ts  totp-qr-reader.ts  tray-guard.ts  types.ts  vault-storage.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon.rgba
src-tauri/src/: crypto_vault.rs  lib.rs  main.rs
tools/: README.md  align-sidebar-logo-button.ps1  apply-v072-cleanup-docs.ps1  apply-v082-contrast-light-mixed.ps1  apply-v082-real-contrast-light-mixed.ps1  apply-v083-login-refino-desktop-rift.ps1  apply-v083-login-refino2-desktop-gate.ps1  apply-v083-login-refino3-desktop-gate.ps1  apply-v083-login-reset-clean.ps1  apply-v083-tray-icon-size.ps1  apply-v084-login-desktop-rift.ps1  audit-project.ps1  boost-native-icon.ps1  build-installer-unique-icon-check.ps1  build-updater-release.cjs  build-updater-release.ps1  ensure-nsis-icon-config.cjs  finalizar-updater-v030.cjs  finalizar-updater-v030.ps1  fix-closed-sidebar-logo-offset.ps1  fix-icon-padding.ps1  fix-menu-toggle-jsx.ps1  fix-nsis-installer-icon-v2.ps1  fix-nsis-installer-icon.ps1  fix-updater-v030-build.cjs  (+20 more)
(+42 files in other folders)
