[package]
name = "kpassword"
version = "0.8.4"
description = "KPassword"
authors = ["Jean Silva"]
edition = "2021"
build = "build.rs"

[lib]
name = "kpassword_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "0.8.4", features = [] }

[dependencies]
tauri = { version = "0.8.4", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"

tauri-plugin-process = "2"
serde = { version = "0.8.4", features = ["derive"] }
serde_json = "1"

tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.8.4", features = ["Foundation", "Security_Credentials_UI"] }
windows-sys = { version = "0.8.4", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }

