[package]
name = "kpassword"
version = "0.9.5"
description = "KPassword"
authors = ["Jean Silva"]
edition = "2021"

[lib]
name = "kpassword_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
getrandom = "0.3"
pbkdf2 = "0.12"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Foundation", "Security_Credentials_UI"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }
